--- a/tutorials/how-to-install-apache-on-ubuntu/01.en.md
+++ b/tutorials/how-to-install-apache-on-ubuntu/01.en.md
@@ -71,7 +71,7 @@ easy yuh?
 
 so lets test it out
 just enter your IP on browser 
-[if installation was successfull you should see this](images/apache-default-template.png)
+if installation was successfull you should see this(images/apache-default-template.png)
 
 ## Step 4 - replacing Default apache template with actual script
 
