--- a/tutorials/how-to-install-apache-on-ubuntu/01.en.md
+++ b/tutorials/how-to-install-apache-on-ubuntu/01.en.md
@@ -94,7 +94,7 @@ sudo nano index.html
 
 Installing and Using Apache is so easy and enjoyable.
 
-in this tutorial we install and config a basic apache web server in Ubuntu.
+in this tutorial we installed and configured a basic apache web server in Ubuntu.
 
 ##### License: MIT
 
